--- a/Other/杂记.md
+++ b/Other/杂记.md
@@ -3,3 +3,10 @@
 系统可以区分 *前台* 和 *后台* 应用。但是用于服务限制目的的后台定义与内存管理使用的定义不同；一个应用按照内存管理的定义可能处于后台，但是按照能够启动服务的定义又处于前台。
 
 android 中TextView.getText一定不为空，最低也是""空字符串，因为setText和构造方法中都有初始化。
+
+Bazel Google自己开发的构建系统 [Blade](https://www.cnblogs.com/Jack47/p/build-in-the-cloud.html)腾讯的构建系统
+
+持续集成
+jenkins
+[travis CI 阮一峰](http://www.ruanyifeng.com/blog/2017/12/travis_ci_tutorial.html)
+[tarvis CI 官网](https://travis-ci.org/)
