--- a/Other/网络类型.md
+++ b/Other/网络类型.md
@@ -30,3 +30,5 @@ WAP和NET的区别：
 建议：
 
 　　平时用WAP，更省流量，需要更流畅网络时，可以切换到net。
+
+[Android 获取双卡手机IMEI，IMSI，ICCID](https://blog.csdn.net/niyingxunzong/article/details/77188040)
